https://github.com/edburns/edburns.github.io/issues/1
Break out three resumes.

--- a/edburns/basic.css
+++ b/edburns/basic.css
@@ -11,3 +11,5 @@ filter: flipv fliph;
 .complete { color: green }
 .authoractionrequired { color: red }
 .publisheractionrequired { color: blue }
+p { padding-right: 150px }
+li { padding-right: 150px }
