--- a/blog/assets/rockstar.css
+++ b/blog/assets/rockstar.css
@@ -3,7 +3,7 @@
 /* CSS Resets From Eric Meyer: http://meyerweb.com/eric/thoughts/2007/05/01/reset-reloaded/ */
 
 html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+h1, h2, h3, h4, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
 del, dfn, em, font, img, ins, kbd, q, s, samp,
 small, strike, strong, sub, sup, tt, var,
@@ -88,6 +88,15 @@ font-size: 180%;
 margin-top: 20px;
 padding-bottom: 20px;
 font-family: georgia;
+}
+
+h5 {
+font-size: 120%;
+margin-top: 20px;
+padding-bottom: 20px;
+font-weight: inherit;
+font-style: inherit;
+font-family: inherit;
 }
 
 #navigation {
